--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@
     color: #ffff;
     font-family: sans-serif;
 
-    height: 100vh;
+    min-height: 100vh;
 
     header {
         display: flex;
