--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@
     color: #ffff;
     font-family: sans-serif;
 
+
     min-height: 100vh;
 
     header {
@@ -45,7 +46,7 @@
 
         padding: 2%;
 
-        height: 100%;
+        min-height: 75vh;
         width: 50%;
 
         color: var(---text-color);
@@ -120,6 +121,8 @@
 
             gap: 1.25rem;
 
+            text-align: center;
+
             .todo {
                 display: flex;
                 justify-content: space-between;
@@ -169,6 +172,7 @@
                 }
             }
         }
+
     }
 
     footer {
